k8s/apps/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: 3-tier-app-eks
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # Wait for DB networking to be ready before starting the App
      containers:
        - name: backend
          image: 373317459404.dkr.ecr.eu-west-2.amazonaws.com/3-tier-eks-backend:ad4da6799e6eaae0f3afdf76610854cbdb41e2c8
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              # Readiness probe - checks if pod can serve traffic (includes DB check)
          readinessProbe:
            httpGet:
              path: /api/health/ready
              port: 8000
            initialDelaySeconds: 10
            failureThreshold: 3
          # Liveness probe - checks if app is alive (lightweight, no DB check)
          livenessProbe:
            httpGet:
              path: /api/health/live
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: 3-tier-app-eks
  annotations:
    # for alb to know where health check should be sent
    alb.ingress.kubernetes.io/healthcheck-path: /api/health/ready
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
