k8s/apps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  namespace: 3-tier-app-eks
  annotations:
    # 1. Make the Load Balancer public
    alb.ingress.kubernetes.io/scheme: internet-facing
    # 2. Route traffic directly to Pod IPs
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          # Specific paths must come FIRST
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          # The "Catch-All" path comes LAST
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
